infrastructure/applications/cluster/load_balancer_security.tf
resource "aws_security_group" "load_balancer" {
  name        = "pythonit-${terraform.workspace}-load-balancer"
  description = "pythonit-${terraform.workspace} load balancer"
  vpc_id      = data.aws_vpc.default.id
}

resource "aws_security_group_rule" "lb_web_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.load_balancer.id
}

resource "aws_security_group_rule" "lb_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.load_balancer.id
}

resource "aws_security_group_rule" "lb_out_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "all"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.load_balancer.id
}
